--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     <a href="main.html" class=""><img src="images/avatar/f.jpg" alt="" class="img-responsive"/></a>                                    
                                 </div>
                                 <div class="col-lg-4">
-                                    <a href="main.html" class=""><img src="images/avatar/g.png" alt="" class="img-responsive "/></a>                                    
+                                    <a href="main.html" class=""><img src="images/avatar/G.png" alt="" class="img-responsive "/></a>                                    
                                 </div>
 								<div class="col-lg-4">
                                     <a href="main.html" class=""><img src="images/avatar/l.png" alt="" class="img-responsive "/></a>                                    
