Changed S in shop.html

--- a/gift.html
+++ b/gift.html
@@ -247,7 +247,7 @@
 							<div class="col-xs-12 col-md-3 imgholder"><a href="gift1.html"><img class="img-responsive medium" src="images/avatar/flipkart.jpg" alt="" />Voucher 1000</a></div>
 							<div class="col-xs-12 col-md-3 imgholder"><a href="gift1.html"><img class="img-responsive medium" src="images/avatar/amazon.png" alt="" />Voucher 1000</a></div>
 							<div class="col-xs-12 col-md-3 imgholder"><a href="gift1.html"><img class="img-responsive medium" src="images/avatar/myntra.jpg" alt="" />Voucher 1000</a></div>
-							<div class="col-xs-12 col-md-3 imgholder"><a href="gift1.html"><img class="img-responsive medium" src="images/avatar/Shop.jpg" alt="" />Voucher 1000</a></div>
+							<div class="col-xs-12 col-md-3 imgholder"><a href="gift1.html"><img class="img-responsive medium" src="images/avatar/shop.jpg" alt="" />Voucher 1000</a></div>
                         
 						</div>
 						<div class="button" style="text-align:center;">
