changed jpg to JPG

--- a/bookingconfirm.html
+++ b/bookingconfirm.html
@@ -293,7 +293,7 @@
 												
                                                 
                                                 <div class="form-actions text-right pal col-md-12" style="background:none;">
-                                                    <img class="img" src="images/avatar/visa.jpg" alt="" /><img class="img" src="images/avatar/master.jpg" alt="" /> 
+                                                    <img class="img" src="images/avatar/visa.JPG" alt="" /><img class="img" src="images/avatar/master.JPG" alt="" /> 
 													<a href="bookingconfirm.html" type="submit" class="btn btn-primary">
                                                         Continue To Payment</a>
                                                 </div>
