changed jpg to JPG

--- a/seatbuddy.html
+++ b/seatbuddy.html
@@ -235,7 +235,7 @@
 				 <button class="btn "><a style="font-weight:bold;color:white;" href="seatbuddy1.html">Find</a></button>
 				 </div>
 				 <div class="col-md-12 ">
-					<img class="img-responsive button" src="images/avatar/seat.jpg" alt="" />
+					<img class="img-responsive button" src="images/avatar/seat.JPG" alt="" />
 				 </div>	
                  <div class="col-md-03 button" style="margin-buttom:10px;">
 				 <button class="btn button btn-green"><a style="font-weight:bold;color:white;" href="checkinaddon.html"> Confirm</a></button>
